# slog

./: README.md
src/: CMakeLists.txt  logger.c  logger.h  slog.c
